# server/server.go
@@ -2,6 +2,7 @@ package server
 
 import (
 	"github.com/DTS-STN/benefit-service/handlers"
+	"github.com/DTS-STN/benefit-service/src/lifejourneys"
 	"github.com/labstack/echo/v4"
 	"github.com/labstack/echo/v4/middleware"
 	"github.com/labstack/gommon/log"
@@ -11,11 +12,14 @@ import (
 var echoService *echo.Echo
 
 func Main(args []string) {
+	setupLifeJourneyFile()
 	// Echo instance
 	echoService = echo.New()
 	service()
 }
-
+func setupLifeJourneyFile() {
+	lifejourneys.LifeJourneyService = lifejourneys.LifeJourneyServiceStruct{Filename: "/home/bungay/Github/benefit-service/src/lifejourneys/life_journeys.json"}
+}
 func service() {
 	echoService.Logger.SetLevel(log.DEBUG)
 
@@ -25,6 +29,7 @@ func service() {
 	// Routes
 	echoService.GET("/swagger/*", echoSwagger.WrapHandler)
 	echoService.GET("/healthcheck", handlers.HandlerService.HealthCheck)
+	echoService.GET("/lifejourney", handlers.HandlerService.LifeJourney)
 
 	// Start server
 	echoService.Logger.Fatal(echoService.Start(":8080"))
